<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/tab_bar_height"
    android:orientation="vertical"
    tools:context=".entry.ui.EntryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            android:text="@string/data"
            android:textAppearance="@style/TextAppearance.Visitor.Overline" />

        <TextView
            android:id="@+id/deleteHistory"
            style="@style/Widget.Visitor.Settings.Button.About"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:text="@string/settings_delete_data" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/adminLock"
            style="@style/Widget.Visitor.Settings.Button.About"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:text="@string/settings_secure_data"
            android:textColor="?colorPrimary" />

        <TextView
            android:id="@+id/changePassword"
            style="@style/Widget.Visitor.Settings.Button.About"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:text="@string/settings_change_password"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            android:text="@string/about_title"
            android:textAppearance="@style/TextAppearance.Visitor.Overline" />

        <TextView
            android:id="@+id/terms_of_service"
            style="@style/Widget.Visitor.Settings.Button.About"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:text="@string/settings_tos"
            android:visibility="gone" />

        <TextView
            android:id="@+id/privacy_policy"
            style="@style/Widget.Visitor.Settings.Button.About"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:text="@string/settings_privacy_policy"
            android:visibility="gone" />

        <TextView
            android:id="@+id/open_source_license"
            style="@style/Widget.Visitor.Settings.Button.About"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:text="@string/settings_oss_licenses" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:dividerHorizontal" />


    </LinearLayout>


    <TextView
        android:id="@+id/version_build_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="48dp"
        android:padding="@dimen/margin_normal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

</LinearLayout>


