<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".entry.ui.EntryFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/very_small_padding"
        android:hint="@string/entry_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/very_small_padding"
        android:hint="@string/entry_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobileField"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/very_small_padding"
        android:hint="@string/entry_temperature">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/temperatureField"
            android:layout_width="match_parent"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/very_small_padding"
        android:hint="@string/entry_area">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/areaField"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/very_small_padding"
        android:hint="@string/entry_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressField"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_marginTop="8dp"
        android:text="@string/submit" />


</LinearLayout>