<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@color/material_green_a200"
        android:gravity="center"
        android:text="@string/share_via" />

    <TextView
        style="@style/TextAppearance.Visitor.Overline"
        android:layout_width="match_parent"
        android:id="@+id/downloadOption"
        android:layout_height="@dimen/dp_40"
        android:layout_margin="@dimen/small_padding"
        android:gravity="center_vertical"
        android:text="@string/download" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/black"/>
    <TextView
        style="@style/TextAppearance.Visitor.Overline"
        android:layout_width="match_parent"
        android:id="@+id/sendOption"
        android:layout_height="@dimen/dp_40"
        android:layout_margin="@dimen/small_padding"
        android:gravity="center_vertical"
        android:text="@string/send" />

</LinearLayout>